--- a/.github/workflows/backend-gcp.yml
+++ b/.github/workflows/backend-gcp.yml
@@ -17,8 +17,18 @@ jobs:
           service_account_key: ${{ secrets.GCP_SA_KEY }}
           export_default_credentials: true
 
+      - name: Enable required services (idempotent)
+        run: |
+          gcloud services enable run.googleapis.com artifactregistry.googleapis.com secretmanager.googleapis.com iamcredentials.googleapis.com -q
+
       - name: Enable Docker auth
         run: gcloud auth configure-docker ${{ secrets.GCP_REGION }}-docker.pkg.dev -q
+
+      - name: Ensure Artifact Registry repository exists
+        run: |
+          gcloud artifacts repositories create ${{ secrets.AR_REPO || 'rd-agent' }} \
+            --repository-format=docker --location=${{ secrets.GCP_REGION }} \
+            --description="RD Agent images" || true
 
       - name: Build & Push image
         run: |
@@ -41,6 +51,9 @@ jobs:
             --timeout 300 \
             --set-env-vars=GEMINI_MAIN_MODEL=gemini-1.5-pro,GEMINI_SMALL_MODEL=gemini-1.5-flash \
             --set-env-vars=ALLOW_ORIGIN_REGEX=${{ secrets.ALLOW_ORIGIN_REGEX || '.*' }} \
-            --set-secrets=GOOGLE_GENAI_API_KEY=GOOGLE_GENAI_API_KEY:latest,GOOGLE_API_KEY=GOOGLE_API_KEY:latest,GOOGLE_CSE_ID=GOOGLE_CSE_ID:latest \
-            --set-secrets=PINECONE_API_KEY=PINECONE_API_KEY:latest,PINECONE_INDEX=PINECONE_INDEX:latest
+            --set-env-vars=GOOGLE_GENAI_API_KEY=${{ secrets.GOOGLE_GENAI_API_KEY }},GOOGLE_API_KEY=${{ secrets.GOOGLE_API_KEY }},GOOGLE_CSE_ID=${{ secrets.GOOGLE_CSE_ID }} \
+            --set-env-vars=PINECONE_API_KEY=${{ secrets.PINECONE_API_KEY }},PINECONE_INDEX=${{ secrets.PINECONE_INDEX }}
+
+      - name: Output backend URL
+        run: gcloud run services describe ${{ secrets.BACKEND_SERVICE }} --region ${{ secrets.GCP_REGION }} --format='value(status.url)'
 
