--- a/.github/workflows/backend-gcp.yml
+++ b/.github/workflows/backend-gcp.yml
@@ -63,6 +63,8 @@ jobs:
           REGION="${{ secrets.GCP_REGION }}"
           REPO="$GCP_PROJECT_ID/$AR_REPO"
           IMAGE="$REGION-docker.pkg.dev/$REPO/backend:$(git rev-parse --short HEAD)"
+          # Safely handle regex with special chars like <, > by quoting
+          ALLOW_ORIGIN_REGEX_VAL="${{ secrets.ALLOW_ORIGIN_REGEX }}"; if [ -z "$ALLOW_ORIGIN_REGEX_VAL" ]; then ALLOW_ORIGIN_REGEX_VAL='.*'; fi
           gcloud run deploy ${{ secrets.BACKEND_SERVICE }} \
             --image $IMAGE \
             --region ${{ secrets.GCP_REGION }} \
@@ -71,9 +73,9 @@ jobs:
             --cpu 1 --memory 1Gi \
             --timeout 300 \
             --set-env-vars=GEMINI_MAIN_MODEL=gemini-1.5-pro,GEMINI_SMALL_MODEL=gemini-1.5-flash \
-            --set-env-vars=ALLOW_ORIGIN_REGEX=${{ secrets.ALLOW_ORIGIN_REGEX || '.*' }} \
-            --set-env-vars=GOOGLE_GENAI_API_KEY=${{ secrets.GOOGLE_GENAI_API_KEY }},GOOGLE_API_KEY=${{ secrets.GOOGLE_API_KEY }},GOOGLE_CSE_ID=${{ secrets.GOOGLE_CSE_ID }} \
-            --set-env-vars=PINECONE_API_KEY=${{ secrets.PINECONE_API_KEY }},PINECONE_INDEX=${{ secrets.PINECONE_INDEX }}
+            --set-env-vars=ALLOW_ORIGIN_REGEX="$ALLOW_ORIGIN_REGEX_VAL" \
+            --set-env-vars=GOOGLE_GENAI_API_KEY="${{ secrets.GOOGLE_GENAI_API_KEY }}",GOOGLE_API_KEY="${{ secrets.GOOGLE_API_KEY }}",GOOGLE_CSE_ID="${{ secrets.GOOGLE_CSE_ID }}" \
+            --set-env-vars=PINECONE_API_KEY="${{ secrets.PINECONE_API_KEY }}",PINECONE_INDEX="${{ secrets.PINECONE_INDEX }}"
 
       - name: Output backend URL
         run: gcloud run services describe ${{ secrets.BACKEND_SERVICE }} --region ${{ secrets.GCP_REGION }} --format='value(status.url)'
