--- a/.github/workflows/backend-gcp.yml
+++ b/.github/workflows/backend-gcp.yml
@@ -29,6 +29,7 @@ jobs:
           gcloud services enable run.googleapis.com artifactregistry.googleapis.com secretmanager.googleapis.com iamcredentials.googleapis.com -q
 
       - name: Ensure Pinecone index exists and get host
+        if: ${{ !secrets.PINECONE_HOST }}   # skip provisioning if host provided via secrets
         id: pinecone
         env:
           PINECONE_API_KEY: ${{ secrets.PINECONE_API_KEY }}
@@ -36,18 +37,36 @@ jobs:
         run: |
           set -euo pipefail
           IDX="${PINECONE_INDEX:-rd-agent-memory}"
-          LIST=$(curl -sS -H "Api-Key: $PINECONE_API_KEY" https://api.pinecone.io/indexes || echo "{}")
-          if ! echo "$LIST" | jq -e --arg n "$IDX" '.indexes // [] | map(.name) | index($n)' >/dev/null; then
-            echo "Creating Pinecone index $IDX"
-            curl -sS -X POST https://api.pinecone.io/indexes \
-              -H "Api-Key: $PINECONE_API_KEY" -H "Content-Type: application/json" \
-              -d "{\"name\":\"$IDX\",\"dimension\":384,\"metric\":\"cosine\",\"spec\":{\"serverless\":{\"cloud\":\"aws\",\"region\":\"us-east-1\"}}}" >/dev/null
-            # wait briefly
-            sleep 5
+          # List indexes (capture HTTP code and avoid printing JSON to logs)
+          CODE=$(curl -sS -w "%{http_code}" -o list.json -H "Api-Key: $PINECONE_API_KEY" https://api.pinecone.io/indexes || true)
+          if [ "$CODE" != "200" ]; then
+            echo "Pinecone list indexes HTTP $CODE; skipping auto-provision."
+            echo "host=" >> $GITHUB_OUTPUT
+            exit 0
           fi
-          DESC=$(curl -sS -H "Api-Key: $PINECONE_API_KEY" https://api.pinecone.io/indexes/$IDX || echo '{}')
-          HOST=$(echo "$DESC" | jq -r '.host // empty')
-          echo "host=$HOST" >> $GITHUB_OUTPUT
+          if ! jq -e . list.json >/dev/null 2>&1; then
+            echo "Pinecone list indexes invalid JSON; skipping auto-provision."
+            echo "host=" >> $GITHUB_OUTPUT
+            exit 0
+          fi
+          if ! jq -e --arg n "$IDX" '.indexes // [] | map(.name) | index($n)' list.json >/dev/null; then
+            echo "Creating Pinecone index $IDX"
+            CODE=$(curl -sS -w "%{http_code}" -o create.json -X POST https://api.pinecone.io/indexes \
+              -H "Api-Key: $PINECONE_API_KEY" -H "Content-Type: application/json" \
+              -d "{\"name\":\"$IDX\",\"dimension\":384,\"metric\":\"cosine\",\"spec\":{\"serverless\":{\"cloud\":\"aws\",\"region\":\"us-east-1\"}}}" || true)
+            if [ "$CODE" = "201" ] || [ "$CODE" = "200" ]; then
+              sleep 5
+            else
+              echo "Create index HTTP $CODE; continuing without host."
+            fi
+          fi
+          CODE=$(curl -sS -w "%{http_code}" -o desc.json -H "Api-Key: $PINECONE_API_KEY" https://api.pinecone.io/indexes/$IDX || true)
+          if [ "$CODE" = "200" ] && jq -e . desc.json >/dev/null 2>&1; then
+            HOST=$(jq -r '.host // empty' desc.json)
+            echo "host=$HOST" >> $GITHUB_OUTPUT
+          else
+            echo "host=" >> $GITHUB_OUTPUT
+          fi
 
       - name: Enable Docker auth
         run: gcloud auth configure-docker ${{ secrets.GCP_REGION }}-docker.pkg.dev -q
@@ -105,4 +124,3 @@ jobs:
 
       - name: Output backend URL
         run: gcloud run services describe ${{ secrets.BACKEND_SERVICE }} --region ${{ secrets.GCP_REGION }} --format='value(status.url)'
-
