Deploy: backend DAG→V2 fallback + Pinecone v4; CI gate; Vercel config

--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ langchain
 langchain-google-genai
 python-dotenv
 requests
-pinecone
+pinecone>=4.0.0
 langchain-community
 sentence-transformers
 jsonschema
