--- a/.github/workflows/backend-gcp.yml
+++ b/.github/workflows/backend-gcp.yml
@@ -102,6 +102,7 @@ jobs:
           REGION="${{ secrets.GCP_REGION }}"
           REPO="$GCP_PROJECT_ID/$AR_REPO"
           IMAGE="$REGION-docker.pkg.dev/$REPO/backend:$(git rev-parse --short HEAD)"
+          HEAD=$(git rev-parse --short HEAD)
           # Safely handle regex with special chars like <, > by quoting
           ALLOW_ORIGIN_REGEX_VAL="${{ secrets.ALLOW_ORIGIN_REGEX }}"; if [ -z "$ALLOW_ORIGIN_REGEX_VAL" ]; then ALLOW_ORIGIN_REGEX_VAL='.*'; fi
           # Prefer explicit PINECONE_HOST secret; then (optional) typo fallback; then step output
@@ -117,10 +118,11 @@ jobs:
             --cpu 1 --memory 2Gi --min-instances 1 \
             --timeout 300 \
             --set-env-vars=GEMINI_MAIN_MODEL=gemini-1.5-pro,GEMINI_SMALL_MODEL=gemini-1.5-flash \
-            --set-env-vars=TOTAL_BUDGET_S=120,HARVEST_BUDGET_S=40,TRIAGE_BUDGET_S=12,DEEPDIVE_BUDGET_S=90,SYNTH_BUDGET_S=8,ENTAILMENT_BUDGET_S=3.0,TRIAGE_TOP_K=50,DEEPDIVE_TOP_K=13 \
+            --set-env-vars=TOTAL_BUDGET_S=120,HARVEST_BUDGET_S=30,TRIAGE_BUDGET_S=10,DEEPDIVE_BUDGET_S=75,SYNTH_BUDGET_S=8,ENTAILMENT_BUDGET_S=3.0,TRIAGE_TOP_K=20,DEEPDIVE_TOP_K=8 \
             --set-env-vars=ALLOW_ORIGIN_REGEX="$ALLOW_ORIGIN_REGEX_VAL" \
             --set-env-vars=GOOGLE_GENAI_API_KEY="${{ secrets.GOOGLE_GENAI_API_KEY }}",GOOGLE_API_KEY="${{ secrets.GOOGLE_API_KEY }}",GOOGLE_CSE_ID="${{ secrets.GOOGLE_CSE_ID }}" \
-            --set-env-vars=PINECONE_API_KEY="${{ secrets.PINECONE_API_KEY }}",PINECONE_INDEX="${{ secrets.PINECONE_INDEX }}",PINECONE_HOST="$PINECONE_HOST_VAL",PUBMED_RETMAX=50,APP_VERSION=prod,GIT_SHA=$(git rev-parse --short HEAD)
+            --set-env-vars=PINECONE_API_KEY="${{ secrets.PINECONE_API_KEY }}",PINECONE_INDEX="${{ secrets.PINECONE_INDEX }}",PINECONE_HOST="$PINECONE_HOST_VAL",PUBMED_RETMAX=25 \
+            --set-env-vars=APP_VERSION=$HEAD,GIT_SHA=$HEAD
 
       - name: Output backend URL
         run: gcloud run services describe ${{ secrets.BACKEND_SERVICE }} --region ${{ secrets.GCP_REGION }} --format='value(status.url)'
