--- a/.github/workflows/frontend-vercel-staging.yml
+++ b/.github/workflows/frontend-vercel-staging.yml
@@ -1,6 +1,8 @@
-name: Frontend Deploy (Vercel Stable)
+name: Frontend Deploy (Vercel Staging)
 
 on:
+  push:
+    branches: [ main ]
   workflow_dispatch:
 
 jobs:
@@ -25,15 +27,14 @@ jobs:
           NEXT_PUBLIC_BACKEND_URL: ${{ secrets.BACKEND_PUBLIC_URL }}
         run: npm run build
 
-      - name: Deploy to Vercel
+      - name: Deploy to Vercel Staging
         env:
           VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
           VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
-          VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
+          VERCEL_PROJECT_ID_STAGING: ${{ secrets.VERCEL_PROJECT_ID_STAGING }}
           NEXT_PUBLIC_BACKEND_URL: ${{ secrets.BACKEND_PUBLIC_URL }}
         run: |
           npx vercel --version | cat
           npx vercel pull --yes --environment=production --token "$VERCEL_TOKEN"
           npx vercel build --token "$VERCEL_TOKEN"
           npx vercel deploy --prebuilt --prod --token "$VERCEL_TOKEN"
-
