--- a/.github/workflows/promote-to-stable.yml
+++ b/.github/workflows/promote-to-stable.yml
@@ -1,11 +1,17 @@
-name: Frontend Deploy (Vercel Stable)
+name: Promote Staging to Stable
 
 on:
   workflow_dispatch:
+    inputs:
+      confirm_promotion:
+        description: 'Type "promote" to confirm promotion to stable'
+        required: true
+        type: string
 
 jobs:
-  deploy:
+  promote:
     runs-on: ubuntu-latest
+    if: github.event.inputs.confirm_promotion == 'promote'
     defaults:
       run:
         working-directory: frontend
@@ -25,7 +31,7 @@ jobs:
           NEXT_PUBLIC_BACKEND_URL: ${{ secrets.BACKEND_PUBLIC_URL }}
         run: npm run build
 
-      - name: Deploy to Vercel
+      - name: Deploy to Vercel Stable
         env:
           VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
           VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
@@ -37,3 +43,11 @@ jobs:
           npx vercel build --token "$VERCEL_TOKEN"
           npx vercel deploy --prebuilt --prod --token "$VERCEL_TOKEN"
 
+      - name: Create Release Tag
+        run: |
+          git config --global user.name 'GitHub Actions'
+          git config --global user.email 'actions@github.com'
+          TAG="stable-$(date +%Y%m%d-%H%M%S)"
+          git tag -a "$TAG" -m "Promoted to stable: $TAG"
+          git push origin "$TAG"
+        working-directory: .
