--- a/.github/workflows/frontend-vercel-staging.yml
+++ b/.github/workflows/frontend-vercel-staging.yml
@@ -31,7 +31,7 @@ jobs:
         env:
           VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
           VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
-          VERCEL_PROJECT_ID_STAGING: ${{ secrets.VERCEL_PROJECT_ID_STAGING }}
+          VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID_STAGING }}
           NEXT_PUBLIC_BACKEND_URL: ${{ secrets.BACKEND_PUBLIC_URL }}
         run: |
           npx vercel --version | cat
