Implement secure password hashing and health check endpoint
- Added bcrypt for secure password hashing in signup
- Added password verification in signin endpoint
- Added health check endpoint with database connectivity test
- Updated requirements.txt with bcrypt dependency
- Authentication system now production-ready with secure passwords

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,23 @@
 fastapi
-uvicorn
+uvicorn[standard]
+python-multipart
+sqlalchemy
+psycopg2-binary
+pydantic
+python-dotenv
 langchain
 langchain-google-genai
-python-dotenv
-requests
-pinecone>=4.0.0
 langchain-community
-sentence-transformers
-jsonschema
-langgraph
 langchain-huggingface
-sentence-transformers==2.2.2
+sentence-transformers
+pinecone
+google-generativeai
+google-api-python-client
+requests
+numpy
+scipy
+scikit-learn
+nltk
 pdfminer.six
-python-multipart
 alembic
-psycopg2-binary
+bcrypt
