--- a/.github/workflows/backend-gcp.yml
+++ b/.github/workflows/backend-gcp.yml
@@ -139,7 +139,8 @@ jobs:
               --set-env-vars=ALLOW_ORIGIN_REGEX="$ALLOW_ORIGIN_REGEX_VAL" \
               --set-env-vars=GOOGLE_GENAI_API_KEY="${{ secrets.GOOGLE_GENAI_API_KEY }}",GOOGLE_API_KEY="${{ secrets.GOOGLE_API_KEY }}",GOOGLE_CSE_ID="${{ secrets.GOOGLE_CSE_ID }}" \
               --set-env-vars=PINECONE_API_KEY="${{ secrets.PINECONE_API_KEY }}",PINECONE_INDEX="${{ secrets.PINECONE_INDEX }}",PINECONE_HOST="$PINECONE_HOST_VAL",PUBMED_RETMAX=25 \
-              --set-env-vars=APP_VERSION=$HEAD,GIT_SHA=$HEAD,UNPAYWALL_EMAIL="${{ secrets.UNPAYWALL_EMAIL }}"
+              --set-env-vars=APP_VERSION=$HEAD,GIT_SHA=$HEAD,UNPAYWALL_EMAIL="${{ secrets.UNPAYWALL_EMAIL }}" \
+              --set-env-vars=DB_HOST="${{ secrets.DB_HOST }}",DB_PORT="${{ secrets.DB_PORT }}",DB_NAME="${{ secrets.DB_NAME }}",DB_USER="${{ secrets.DB_USER }}",DB_PASSWORD="${{ secrets.DB_PASSWORD }}"
             rc=$?
             set -e
             if [ $rc -eq 0 ]; then
