--- a/.github/workflows/frontend-vercel-staging.yml
+++ b/.github/workflows/frontend-vercel-staging.yml
@@ -8,9 +8,6 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: frontend
     steps:
       - uses: actions/checkout@v4
 
@@ -20,12 +17,16 @@ jobs:
           node-version: '20'
 
       - name: Install dependencies
-        run: npm ci --no-audit --no-fund
+        run: |
+          cd frontend
+          npm ci --no-audit --no-fund
 
       - name: Build Next.js (frontend/)
         env:
           NEXT_PUBLIC_BACKEND_URL: ${{ secrets.BACKEND_PUBLIC_URL }}
-        run: npm run build
+        run: |
+          cd frontend
+          npm run build
 
       - name: Deploy to Vercel
         env:
