--- a/.github/workflows/frontend-vercel-staging.yml
+++ b/.github/workflows/frontend-vercel-staging.yml
@@ -11,6 +11,13 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: Configure Git for Vercel
+        run: |
+          git config --global user.email "fredericle77@gmail.com"
+          git config --global user.name "fredericle77"
+          git commit --amend --author="fredericle77 <fredericle77@gmail.com>" --no-edit || true
+          git log --oneline -1
+
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
