🔧 Fix stable deployment checkout with explicit git command
- Remove ref parameter from checkout action to avoid branch interpretation
- Add separate git checkout step for commit SHA resolution
- Ensures proper deployment to specific commits like 62ba8d9

--- a/.github/workflows/backend-gcp-stable.yml
+++ b/.github/workflows/backend-gcp-stable.yml
@@ -18,8 +18,10 @@ jobs:
     steps:
       - uses: actions/checkout@v4
         with:
-          ref: ${{ github.event.inputs.git_ref }}
           fetch-depth: 0
+      
+      - name: Checkout specific commit
+        run: git checkout ${{ github.event.inputs.git_ref }}
 
       - name: Authenticate to Google Cloud
         uses: google-github-actions/auth@v2
