--- a/.github/workflows/backend-gcp-stable.yml
+++ b/.github/workflows/backend-gcp-stable.yml
@@ -21,7 +21,9 @@ jobs:
           fetch-depth: 0
       
       - name: Checkout specific commit
-        run: git checkout ${{ github.event.inputs.git_ref }}
+        run: |
+          git fetch origin
+          git checkout ${{ github.event.inputs.git_ref }}
 
       - name: Authenticate to Google Cloud
         uses: google-github-actions/auth@v2
