🔧 Improve stable deployment checkout with fallback branch creation
- Use git fetch --all to ensure all remote refs are available
- Add fallback to create temporary branch if direct checkout fails
- Provides more robust commit SHA resolution for stable deployments

--- a/.github/workflows/backend-gcp-stable.yml
+++ b/.github/workflows/backend-gcp-stable.yml
@@ -22,8 +22,8 @@ jobs:
       
       - name: Checkout specific commit
         run: |
-          git fetch origin
-          git checkout ${{ github.event.inputs.git_ref }}
+          git fetch --all
+          git checkout ${{ github.event.inputs.git_ref }} || git checkout -b temp-deploy ${{ github.event.inputs.git_ref }}
 
       - name: Authenticate to Google Cloud
         uses: google-github-actions/auth@v2
